# Warlords

./: .gitignore  COMBAT_SYSTEM.md  Cargo.toml  characters.json  characters.json.backup  extract_pdf.py  forge_rules_complete.txt  forge_rules_extracted.txt  forge_rules_ocr_test.txt  forge_rules_pdftotext.txt  forge_rules_text.txt  run_game.sh  run_warlords.sh
saves/: warlords_save.json
src/: lib.rs  main.rs  server.rs  simple_main.rs  simple_server.rs
src/database/: mod.rs
src/forge/: combat.rs  magic.rs  mod.rs
src/game/: mod.rs
src/network/: mod.rs
src/ui/: mod.rs
src/world/: display.rs  dungeon.rs  mod.rs  npc.rs  persistence.rs  river.rs  road.rs  settlement.rs  terrain.rs
