[package]
name = "warlords"
version = "0.1.0"
edition = "2021"
description = "A terminal-based Forge: Out of Chaos RPG"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
ratatui = "0.24"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
noise = "0.8"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

[lib]
name = "warlords"
path = "src/lib.rs"

[[bin]]
name = "warlords"
path = "src/main.rs"